--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   box-sizing: border-box;
   min-height: 100vh;
   background-color: var(--bgcolor);
-  font-family: "Open Sans", sans-serif;
+  font-family: "Poppins", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
